# ProyectoCienciaDatos

./: README.md  main.py  pyproject.toml  requirements.txt
Notebook/: EDA.ipynb  Interfaz_streamlit.ipynb  app.py  heart_failure_clinical_records-logistic_regression-v1.joblib  heart_failure_clinical_records_extended.csv  heart_failure_clinical_records_extended_cleaned.csv
data/processed/: heart_failure_augmented.csv  heart_failure_clinical_records_extended_cleaned.csv
models/trained/: heart_failure_clinical_records-logistic_regression-v1.joblib  heart_failure_clinical_records-logistic_regression.joblib
reports/: app.py
src/data_exploration/: eda.ipynb  heart_failure_clinical_records_extended_cleaned.csv
src/notebook/: Notebook_dataset_base.ipynb  Notebook_dataset_sintetico.ipynb  Notebook_dataset_sintetico_transformados.ipynb
src/preprocessing_modeling/: preprocessing_and_models.ipynb
